# rolloutlib

./: .gitignore  LICENSE  README.md  SETUP.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
benchmarks/: rollout_group_throughput.py
docs/: Makefile  api.md  api.rst  concepts.md  concepts.rst  conf.py  development.md  development.rst  getting-started.md  getting-started.rst  index.md  index.rst
docs/concepts/: datasets-and-evaluation.md  environments.md  evaluations.md  graders.md  rollouts.md  spaces.md
docs/graders/: composite-graders.md  examples.md  reward-graders.md  rubrics.md  scores-and-aggregation.md
docs/integrations/: finrl.md
docs/javascripts/: version-check.js
overrides/: main.html
rolloutlib/: __init__.py  _awaitables.py  content.py  types.py
rolloutlib/datasets/: __init__.py  core.py
rolloutlib/envs/: __init__.py  adapters.py  bridges.py  checking.py  core.py  language.py  wrappers.py
rolloutlib/evals/: __init__.py  core.py
rolloutlib/evals/benchmarks/: __init__.py  math.py
rolloutlib/graders/: __init__.py  core.py  llm.py
rolloutlib/policies/: __init__.py  openai.py
rolloutlib/rollouts/: __init__.py  core.py
rolloutlib/spaces/: __init__.py  _pydantic.py  compatibility.py  json.py  messages.py  text.py  tokens.py  tools.py
rolloutlib/wrappers/: __init__.py  async_.py  core.py  grading.py  language.py
src/rolloutlib/: __init__.py
tests/: test_benchmarks.py  test_content.py  test_envs.py  test_evals.py  test_finrl_repositories.py  test_graders.py  test_gymnasium_language_wrappers.py  test_llm_graders.py  test_openai_chess_integration.py  test_openai_finrl_historical_integration.py  test_openai_finrl_integration.py  test_openai_policy.py  test_rollouts.py  test_rubrics.py  test_spaces.py  test_tinker_aime.py  test_tinker_policy.py  test_wrappers.py
