[project]
name = "rolloutlib"
version = "0.1.0"
description = "Environments and post-training for language agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/atemaguer/rolloutlib"
Repository = "https://github.com/atemaguer/rolloutlib"
Issues = "https://github.com/atemaguer/rolloutlib/issues"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
