[project]
name = "rolloutlib"
version = "0.2.0"
description = "Sync and async environments for agentic RL post-training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.1",
    "pydantic>=2.10",
]

[project.optional-dependencies]
benchmarks = [
    "datasets>=3.0",
]

[project.urls]
Homepage = "https://github.com/atemaguer/rolloutlib"
Repository = "https://github.com/atemaguer/rolloutlib"
Issues = "https://github.com/atemaguer/rolloutlib/issues"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3",
    "ruff>=0.12",
]
docs = [
    "sphinx>=8.2",
    "sphinx-autodoc-typehints>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["rolloutlib", "tests"]
