[project]
name = "rolloutlib"
version = "0.2.0"
description = "Gymnasium-native infrastructure for agentic RL post-training"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "agentic-rl",
    "language-agents",
    "post-training",
    "evaluation",
    "reinforcement-learning",
    "gymnasium",
]
dependencies = [
    "gymnasium>=1.1",
    "pydantic>=2.10",
]

[project.optional-dependencies]
benchmarks = [
    "datasets>=3.0",
]
media = [
    "pillow>=10.0",
]
openai = [
    "openai>=2.0",
    "pillow>=10.0",
]
openai-chess = [
    "gym-bullet-chess[render]>=0.0.1",
    "openai>=2.0",
    "pillow>=10.0",
]
openai-finrl = [
    "openai>=2.0",
    "yfinance>=0.2.50",
]

[project.urls]
Homepage = "https://github.com/atemaguer/rolloutlib"
Repository = "https://github.com/atemaguer/rolloutlib"
Issues = "https://github.com/atemaguer/rolloutlib/issues"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3",
    "ruff>=0.12",
]
docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["rolloutlib", "tests"]
